add selector sync and refresh features

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,15 @@
 <div class="clear"></div>
 <br />
 
+top:<input type="number" ng-model="selected.top" />
+<br>
+left:<input type="number" ng-model="selected.left" />
+<br>
+width:<input type="number" ng-model="selected.width" />
+<br>
+height:<input type="number" ng-model="selected.height" />
+<br>
+
 <button type="button" ng-click="capture()" ng-disabled="!enabled">capture</button>
 
 	<script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
