--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@ height:<input type="number" ng-model="selected.height" />
 <button type="button" ng-click="capture()" ng-disabled="!enabled">capture</button>
 
 	<script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
-    <script type="text/javascript" src="src/ngImageEditor.js"></script>
+    <script type="text/javascript" src="ngImageEditor.js"></script>
 	<script type="text/javascript">
 		function testCtrl( $scope ){
 
