--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@ height:<input type="number" ng-model="selected.height" />
 
 	<script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="src/app.js"></script>
+    <script type="text/javascript" src="src/Overlay.js"></script>
     <script type="text/javascript" src="src/ngImageEditor.js"></script>
 	<script type="text/javascript">
 		function testCtrl( $scope ){
