upgrade angular version

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 		}
 	</style>
 </head>
-<body ng-app="ngImageEditor" ng-controller="testCtrl">
+<body ng-controller="testCtrl">
 
 
 	<div on-img-change="onImageChange()" class="ng-image-editor" selected="selected" img-src="imgSrc" ng-image-editor="imageEditor" ng-init="imgSrc='/images/head.jpeg'; selected = {width:150,height:150,top:0,left:0};" enabled-resize-selector = "enabledResizeSelector" ></div>
@@ -46,7 +46,8 @@ height:<input type="number" ng-model="selected.height" />
     <script type="text/javascript" src="src/Overlay.js"></script>
     <script type="text/javascript" src="src/ngImageEditor.js"></script>
 	<script type="text/javascript">
-		function testCtrl( $scope ){
+        var demoApp = angular.module( 'demo', ['ngImageEditor'] );
+        demoApp.controller( 'testCtrl', function( $scope ){
 
             $scope.enabledResizeSelector = true;
 
@@ -66,7 +67,8 @@ height:<input type="number" ng-model="selected.height" />
 			};
 
 			$scope.onImageChange = function(){console.log( 'img change' );}
-		}
+		});
+        angular.bootstrap( document, [demoApp.name] );
 	</script>
 </body>
 </html>
