--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 <body ng-controller="testCtrl">
 
 
-	<div on-img-change="onImageChange()" class="ng-image-editor" selected="selected" img-src="imgSrc" ng-image-editor="imageEditor" ng-init="imgSrc='/images/head.jpeg'; selected = {width:150,height:150,top:0,left:0};" enabled-resize-selector = "enabledResizeSelector" ></div>
+	<div on-img-change="onImageChange(imgSize)" class="ng-image-editor" selected="selected" img-src="imgSrc" ng-image-editor="imageEditor" ng-init="imgSrc='/images/head.jpeg'; selected = {width:150,height:150,top:0,left:0};" enabled-resize-selector = "enabledResizeSelector" ></div>
 <img class="offset-1" ng-src="{{selectedBlock}}" alt="" />
 <div class="clear"></div>
 <br />
@@ -66,7 +66,9 @@ height:<input type="number" ng-model="selected.height" />
 				$scope.selectedBlock = $scope.imageEditor.toDataURL();
 			};
 
-			$scope.onImageChange = function(){console.log( 'img change' );}
+			$scope.onImageChange = function(size){
+              console.log( 'img change width:' + size.width + ' height:' + size.height );
+            }
 		});
         angular.bootstrap( document, [demoApp.name] );
 	</script>
