--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
 <a id="ngimageeditor" class="anchor" href="#ngimageeditor" aria-hidden="true"><span class="octicon octicon-link"></span></a>ngImageEditor</h1>
 
-<p><img src="/public/images/screenprint.png" alt="demo image"></p>
+<p><img src="public/images/screenprint.png" alt="demo image"></p>
 
 <p>This is a image editor for angular.It can cut image.</p>
 
@@ -48,7 +48,7 @@
 <h2>
 <a id="demo" class="anchor" href="#demo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Demo</h2>
 
-<p><a href="http://www.sparrowjang.com/example/bower_components/ngImageEditor/public/index.html">demo</a></p>
+<p><a href="public/index.html">demo</a></p>
 
 <h2>
 <a id="install" class="anchor" href="#install" aria-hidden="true"><span class="octicon octicon-link"></span></a>Install</h2>
