--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 <body ng-controller="testCtrl">
 
 
-	<div on-img-change="onImageChange(imgSize)" class="ng-image-editor" selected="selected" img-src="imgSrc" ng-image-editor="imageEditor" ng-init="imgSrc='/images/head.jpeg'; selected = {width:50,height:50,top:0,left:0}; aspectRatioX = aspectRatioX = 2" enabled-resize-selector="enabledResizeSelector" aspect-ratio="{{aspectRatioX+':'+aspectRatioY}}" ></div>
+	<div on-img-change="onImageChange(imgSize)" class="ng-image-editor" selected="selected" img-src="imgSrc" ng-image-editor="imageEditor" ng-init="imgSrc='/images/head.jpeg'; selected = {width:50,height:50,top:0,left:0}; aspectRatioX = aspectRatioY = 2" enabled-resize-selector="enabledResizeSelector" aspect-ratio="{{aspectRatioX+':'+aspectRatioY}}" ></div>
 <img class="offset-1" ng-src="{{selectedBlock}}" alt="" />
 <div class="clear"></div>
 <br />
