--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@ aspect-ratio:<input type="number" ng-model="aspectRatioX" style="width:40px"/>:<
     <script type="text/javascript" src="src/ngImageEditor.js"></script>
 	<script type="text/javascript">
         var demoApp = angular.module( 'demo', ['ngImageEditor'] );
-        demoApp.controller( 'testCtrl', function( $scope ){
+        demoApp.controller( 'testCtrl', ['$scope', function( $scope ){
 
             $scope.enabledResizeSelector = true;
 
@@ -71,8 +71,8 @@ aspect-ratio:<input type="number" ng-model="aspectRatioX" style="width:40px"/>:<
 			$scope.onImageChange = function(size){
               console.log( 'img change width:' + size.width + ' height:' + size.height );
             }
-		});
-        angular.bootstrap( document, [demoApp.name] );
+		}]);
+        angular.bootstrap( document, [demoApp.name], {strictDi:true} );
 	</script>
 </body>
 </html>
