--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,9 @@ aspect-ratio:<input type="number" ng-model="aspectRatioX" style="width:40px"/>:<
     <script type="text/javascript" src="src/ngImageEditor.js"></script>
 	<script type="text/javascript">
         var demoApp = angular.module( 'demo', ['ngImageEditor'] );
+        demoApp.config(['$compileProvider', function ($compileProvider) {
+          $compileProvider.debugInfoEnabled(false);
+        }]);
         demoApp.controller( 'testCtrl', ['$scope', function( $scope ){
 
             $scope.enabledResizeSelector = true;
